--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             height: 100vh;
             margin: 0;
             overflow: hidden;
+            position: relative;
         }
 
         .container {
@@ -25,6 +26,8 @@
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
             animation: fadeIn 1s ease-in-out;
+            position: relative;
+            z-index: 1;
         }
 
         h1 {
@@ -53,11 +56,31 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background 0.3s ease, transform 0.3s ease;
+            position: relative;
+            overflow: hidden;
         }
 
         button:hover {
             background: linear-gradient(90deg, #0072ff, #00c6ff);
             transform: scale(1.1);
+        }
+
+        button:after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 300%;
+            height: 300%;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            transition: transform 0.5s ease;
+            z-index: 0;
+        }
+
+        button:hover:after {
+            transform: translate(-50%, -50%) scale(1);
         }
 
         @keyframes fadeIn {
@@ -70,9 +93,47 @@
                 transform: translateY(0);
             }
         }
+
+        /* Background Animation */
+        .background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: 0;
+        }
+
+        .bubble {
+            position: absolute;
+            bottom: -150px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            animation: rise 10s infinite;
+            opacity: 0.5;
+        }
+
+        @keyframes rise {
+            0% {
+                transform: translateY(0);
+                opacity: 0.5;
+            }
+            100% {
+                transform: translateY(-100vh);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
+    <div class="background">
+        <div class="bubble" style="left: 10%; width: 50px; height: 50px; animation-duration: 8s;"></div>
+        <div class="bubble" style="left: 30%; width: 70px; height: 70px; animation-duration: 12s;"></div>
+        <div class="bubble" style="left: 50%; width: 40px; height: 40px; animation-duration: 10s;"></div>
+        <div class="bubble" style="left: 70%; width: 60px; height: 60px; animation-duration: 9s;"></div>
+        <div class="bubble" style="left: 90%; width: 80px; height: 80px; animation-duration: 11s;"></div>
+    </div>
     <div class="container">
         <h1>Metaverse Fact</h1>
         <p id="fact"></p>
